Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15190

Bad error for non-versioned table PARTITION BY SYSTEM_TIME

    XMLWordPrintable

Details

    Description

      Bad error/code message upon attempt to partition by system_time a table without system versioning.

      create or replace table t1 (i int);
      alter table t1 partition by system_time limit 10 (partition p1 history, partition pn current);
      

      Actual result

      MariaDB [test]> alter table t1 partition by system_time limit 10 (partition p1 history, partition pn current);
      ERROR 4109 (HY000): Transaction system versioning for `#sql-5280_9` is not supported
      

      An error is expected, but this particular error doesn't seem optimal for the case, something like "the table is no system-versioned" would be more suitable.

      Attachments

        Activity

          People

            midenok Aleksey Midenkov
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - Not Specified
                Not Specified
                Logged:
                Time Spent - 10m
                10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.