MDEV-15190 Bad error for non-versioned table PARTITION BY SYSTEM_TIME