sql/partition_info.cc
@@ -957,9 +957,15 @@ bool partition_info::vers_setup_expression(THD * thd, uint32 alter_add)
 {
   DBUG_ASSERT(part_type == VERSIONING_PARTITION);
 
+  if (!table->versioned())
+  {
+    my_error(ER_VERS_NOT_VERSIONED, MYF(0), table->s->error_table_name());
+    return true;
+  }
+
   if (!table->versioned(VERS_TIMESTAMP))
   {
-    my_error(ER_VERS_ENGINE_UNSUPPORTED, MYF(0), table->s->table_name.str);
+    my_error(ER_VERS_ENGINE_UNSUPPORTED, MYF(0), table->s->error_table_name());
     return true;
   }
 
